added js and fixed dot captions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- YOUR CONTENT GOES HERE -->
     <!-- headline -->
     <div class="container">
-      <h1>Vacant Store Fronts on Wellwood Ave. in Lindenhurst, N.Y.</h1>
+      <h1>Vacant Storefronts on Wellwood Ave. in Lindenhurst, N.Y.</h1>
     </div>
 
     <!-- top image -->
@@ -37,7 +37,7 @@
         <div class="inner">
           <a class="close" href="#"></a>
           <div class="content">
-            <p>A now empty storefront sign that used to read "Stella's Pizza" after the owner moved out in late 2019</p>
+            <p>A blank storefront sign, which used to read "Stella's Pizza," has now become an eyesore after owner Joe DelPrete moved out in late 2019 due to rising rent.</p>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
         <div class="inner">
           <a class="close" href="#"></a>
           <div class="content">
-            <p>A now empty storefront sign that used to read "Stella's Pizza" after the owner moved out in late 2019</p>
+            <p>A neighboring vacant storefront on the southwest corner of Wellwood Ave. in Lindenhurst, N.Y. Years ago, this building used to house a mom and pop store called "One Price Dry Cleaners."</p>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
         <div class="inner">
           <a class="close" href="#"></a>
           <div class="content">
-            <p>A now empty storefront sign that used to read "Stella's Pizza" after the owner moved out in late 2019</p>
+            <p>Though a Chase bank is just down the steet, their drivethrough ATM has been a thing of the past. The steel gates have blocked passage to the streets behind Wellwood Ave.</p>
           </div>
         </div>
       </div>
@@ -61,15 +61,15 @@
         <div class="inner">
           <a class="close" href="#"></a>
           <div class="content">
-            <p>A now empty storefront sign that used to read "Stella's Pizza" after the owner moved out in late 2019</p>
+            <p>On warm days, Stella's owner Joe DelPrete would put out tables and chairs for customers to dine outside. Now, the cracked pavement lies bare.</p>
           </div>
         </div>
       </div>
-      <div class="dot yellow door">
+      <div class="dot purple door">
         <div class="inner">
           <a class="close" href="#"></a>
           <div class="content">
-            <p>A now empty storefront sign that used to read "Stella's Pizza" after the owner moved out in late 2019</p>
+            <p>Owner Joe DelPrete closed the doors to Stella's to partner with his brother Tony. They opened a pizzeria a few storefronts down called "Villa Pizzeria." As of now, the village has no future plans to fill the space.</p>
           </div>
         </div>
       </div>
@@ -92,6 +92,11 @@
         Truffaut godard freegan man bun waistcoat pug. Distillery art party fam portland, gastropub authentic kogi vexillologist. Live-edge knausgaard chartreuse before they sold out la croix single-origin coffee hell of lyft
         asymmetrical cred
         flexitarian. Chartreuse chambray blog heirloom, beard jean shorts lumbersexual cornhole drinking vinegar tousled portland.</p>
+
+      <div class="container photo">
+        <img src="img/frontbefore.JPG" />
+        <caption><i>Photo Credit: https://www.stellas2pizzeria.com</i></caption>
+      </div>
 
       <p>Succulents quinoa williamsburg marfa iceland semiotics skateboard authentic. Raclette jean shorts sartorial hell of locavore, shoreditch austin. Cold-pressed semiotics 8-bit cred, glossier try-hard kogi paleo. Truffaut
         pour-over vegan
